# deployment-services-internal-load-balancer

./: README.md  main.py  pyproject.toml
app/: main.py
azure-openai/: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
azure-openai/app/: main.py
azure-openai/app/utils/: application.py
tavily/: .gitignore  README.md
tavily/app/: main.py
tavily/app/middleware/: logging_middleware.py
